--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
 	"description": "An FCC Backend Challenge",
 	"main": "index.js",
 	"scripts": {
-		"start": "node index.js"
+		"start": "node index.js",
+		"dev": "nodemon server"
 	},
 	"dependencies": {
-		"express": "^4.12.4",
-		"cors": "^2.8.0"
+		"cors": "^2.8.0",
+		"express": "^4.12.4"
 	},
 	"repository": {
 		"type": "git",
@@ -20,5 +21,8 @@
 		"express",
 		"freecodecamp"
 	],
-	"license": "MIT"
+	"license": "MIT",
+	"devDependencies": {
+		"nodemon": "^2.0.16"
+	}
 }
